--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -56,7 +56,7 @@ runs:
     - name: Update Task Definition Image
       run: |
         TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "service:158" --region "us-east-1")
-        echo $TASK_DEFINITION | jq '.containerDefinitions[0].image="${NEW_ECR_IMAGE}"' > task-def.json
+        echo $TASK_DEFINITION | jq '.containerDefinitions[0].image='${NEW_ECR_IMAGE}'' > task-def.json
         echo "show task-def.json"
         cat task-def.json
       shell: bash
