--- a/action.yml
+++ b/action.yml
@@ -12,8 +12,8 @@ inputs:
   backup-service-name:
     description: 'ECS Service name for the backup version'
     required: true
-  task-family:
-    description: 'ECS Task Family name'
+  task-definition:
+    description: 'ECS Task Definition'
     required: true
   container-name:
     description: 'Name of the container in the task definition'
@@ -32,23 +32,16 @@ inputs:
     required: true
     default: 'private'
   image-tag:
-    description: 'docker image tag'
+    description: 'docker Image tag'
     required: true
+
 
 runs:
   using: 'composite'
   steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
-    - name: Set up AWS CLI
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ inputs.aws-region }}
-
-    - name: Get ECR Login
+    - name: Get ECR login
       run: |
         if [ "${{ inputs.registry-type }}" == "public" ]; then
           aws ecr-public get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{inputs.repo-uri}}
@@ -56,38 +49,31 @@ runs:
           aws ecr get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{ inputs.repo-uri }}
         fi
         docker pull ${{ inputs.repo-uri }}:${{ inputs.image-tag }}
-      shell: bash
-
-    - name: Get Latest ECR Image URI
-      id: ecr
-      run: |
-        IMAGE_URI=$(docker inspect --format='{{index .RepoDigests 0}}' ${{ inputs.repo-uri }}:${{ inputs.image-tag }})
-        echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
-        echo "Retrieved Image URI: $IMAGE_URI"
-
+        NEW_ECR_IMAGE="${{ inputs.repo-uri }}:${{ inputs.image-tag }}"
+        echo "Retrieved Image URI: $NEW_ECR_IMAGE"
       shell: bash
 
     - name: Update Task Definition Image
-      id: update-task-def
       run: |
-        NEW_TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "${{ inputs.task-definition }}" --region "${{ inputs.aws-region }}")
-        NEW_TASK_DEFINITION=$(echo "$NEW_TASK_DEFINITION" | jq --arg IMAGE "$IMAGE_URI" '.taskDefinition | .containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn) | del(.revision) | del(.status) | del(.requiresAttributes) | del(.compatibilities)')
-        echo "::set-output name=new-task-definition::$NEW_TASK_DEFINITION"
-      shell: bash
-      env:
-        IMAGE_URI: ${{ env.IMAGE_URI }}
-
-    - name: Register Updated Task Definition
-      run: |
-        aws ecs register-task-definition --region "${{ inputs.aws-region }}" --cli-input-json "$NEW_TASK_DEFINITION"
+        TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "service:158" --region "us-east-1")
+        NEW_ECR_IMAGE="${{ inputs.repo-uri }}:${{ inputs.image-tag }}"
+        echo $TASK_DEFINITION | jq --arg new_image "$NEW_ECR_IMAGE" '.taskDefinition.containerDefinitions[0].image = $new_image' > task-def.json
+        echo "Updated task-def.json"
+        cat task-def.json
       shell: bash
 
-    -     - name: Deploy Primary Version
+    - name: Register Task Definition 
+      run: |
+        REGISTERED_TASK_DEFINITION=$(aws ecs register-task-definition --cli-input-json file://task-def.json --region "us-east-1")
+        echo $REGISTERED_TASK_DEFINITION
+      shell: bash
+
+    - name: Deploy Primary Version
       run: |
         aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --task-definition "${{ inputs.task-definition }}:latest"
       shell: bash
 
-    - name: Wait for Primary Deployment to Stabilize
+    - name: Wait for Primary deployment to Stabilize
       run: |
         aws ecs wait services-stable --cluster ${{ inputs.cluster-name }} --services ${{ inputs.service-name }}
       shell: bash
