--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -56,8 +56,8 @@ runs:
     - name: Update Task Definition Image
       run: |
          TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition ${{ inputs.task-definition }} --region ${{ inputs.aws-region }})
-         NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq --arg IMAGE "$NEW_ECR_IMAGE" '.taskDefinition.containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn) | del(.taskDefinition) | del(.revision) | del(.status) | del(.requiresAttributes) | del(.compatibilities) | del(.registeredAt)| del(.deregisteredAt) | del(.registeredBy)')
-         NEW_TASK_INFO=$(aws ecs register-task-definition --region ${{ inputs.aws-region }} --family "service" --container-definitions "[{\"name\":\"maria-dev-container\",\"image\":\"$NEW_ECR_IMAGE\",\"essential\":true}]" --cli-input-json > task-def.json)
+         NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq --arg IMAGE "$NEW_ECR_IMAGE" '.taskDefinition.containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn) | del(.taskDefinition) | del(.revision) | del(.status) | del(.requiresAttributes) | del(.compatibilities) | del(.registeredAt)| del(.deregisteredAt) | del(.registeredBy)' > task-def.json)
+         NEW_TASK_INFO=$(aws ecs register-task-definition --region ${{ inputs.aws-region }} --family "service" --container-definitions "[{\"name\":\"maria-dev-container\",\"image\":\"$NEW_ECR_IMAGE\",\"essential\":true}]" --cli-input-json file://task-def.json)
          NEW_REVISION=$(echo $NEW_TASK_INFO | jq '.taskDefinition.revision')
          cat task-def.json
       shell: bash
